--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/ios
+/build/*
+!/build/web
 
 # Symbolication related
 app.*.symbols
