--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_hooks: ^0.20.5
+  keyboard_actions: ^4.2.0
   syncfusion_flutter_calendar: 26.1.35
 
 dev_dependencies:
