--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "Cupertino",
-    "ikenie",
-    "Schyler",
-    "syncfusion"
-  ]
+  "cSpell.words": ["Cupertino", "ikenie", "Schyler", "syncfusion", "unfocus"]
 }
