--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: '>=3.3.1 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,8 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_hooks: ^0.20.5
+  linkify: ^5.0.0
   keyboard_actions: ^4.2.0
-  syncfusion_flutter_calendar: 26.1.35
+  #syncfusion_flutter_calendar: 26.1.35
 
 dev_dependencies:
   flutter_test:
