--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_hooks: ^0.20.5
+  go_router: ^14.6.2
   linkify: ^5.0.0
   keyboard_actions: ^4.2.0
   syncfusion_flutter_calendar: ^26.1.35
+  photo_manager: ^3.6.3
+  photo_manager_image_provider: ^2.2.0
 
 dev_dependencies:
   flutter_test:
