--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   syncfusion_flutter_calendar: ^26.1.35
   photo_manager: ^3.6.3
   photo_manager_image_provider: ^2.2.0
+  signature: ^5.5.0
 
 dev_dependencies:
   flutter_test:
